fix: try fix for edge disgusting scrollbar

--- a/src/style/app.css
+++ b/src/style/app.css
@@ -25,3 +25,7 @@
 html {
   scroll-behavior: smooth;
 }
+
+.edge-overlay-scrollbar {
+  scrollbar-gutter: auto | stable && both-edges?;
+}
